Tweak the donation button padding for appeals to prevent line wrapping. (Fixes #717) (PR #718)

--- a/media/css/l10n/fr/intl.css
+++ b/media/css/l10n/fr/intl.css
@@ -6,6 +6,9 @@
 }
 
 /* Donation appeal button */
+.page-appeal-dec24 .donate-banner #donate-banner-left {
+    padding: 0.6875rem 0.75rem;
+}
 .donate-banner #donate-banner-right > b {
     font-size: 1.4rem;
 }
